# cuda-raytracer

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_LOG.md  ISSUES_AUDIT.md  README.md  TODO.md  install-docker-gpu.sh  logs.txt  manifest  run-claude.sh  test_compile.sh
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json  settings.local.json
cmake/: FindGLFW3.cmake
docs/: accumulation-fix.md
scripts/: clang-tidy.sh  compute-sanitizer.sh
shaders/: mesh.vert  rasterize.vert
src/: GLTexture.cpp  GLTexture.h  Gui.cpp  Gui.h  HeadlessTexture.cpp  HeadlessTexture.h  Input.cpp  Input.h  InputHandler.cpp  InputHandler.h  Mesh.cpp  Mesh.h  MeshBVHBuilder.cpp  MeshBVHBuilder.h  ObjLoader.cpp  ObjLoader.h  Picker.cpp  Picker.h  Quad.cpp  Quad.h  Rasterizer.cpp  Rasterizer.h  RenderLoop.cpp  RenderLoop.h  RenderMode.h  RenderParams.h  Scene.cpp  Scene.h  SceneController.cpp  SceneController.h  Shader.h  ShaderManager.cpp  ShaderManager.h  Window.cpp  Window.h  cuda_errors.cpp  cuda_errors.h  main.cpp  stb_image_impl.cpp
src/raytracer/: AABB.h  BVHNode.h  Camera.h  Constants.h  Disc.h  FrameBuffer.h  Hittable.h  Material.h  MeshBVHNode.h  Rectangle.h  Sphere.h  Texture.h  Triangle.h  TriangleMesh.h  World.h  kernel.cu  kernel.h
src/shaders/: mesh.frag  rendertype_accumulate.frag  rendertype_screen.frag
